--- a/project2/register.html
+++ b/project2/register.html
@@ -9,7 +9,7 @@
 
     <center>
 
-        <h1>Error Makes Clever Academy🚀</h1>
+        <h1>Good Academy🚀</h1>
 
         <p><b>Training | Tech News | Freshers Guide</b></p>
 
