--- a/project2/index.html
+++ b/project2/index.html
@@ -8,7 +8,7 @@
 <body bgcolor="#e9f2f5">
 
     <center>
-        <h1>Error Makes Clever Academy🚀</h1>
+        <h1>Good Academy🚀</h1>
 
         <p><b>Training | Tech News | Freshers Guide</b></p>
 
